[package]
name = "mac-can-sys"
version = "0.12.0"
edition = "2021"
license = "MIT"
description = "Raw FFI bindings for PCBUSB.h in the MacCAN package."
homepage = "https://github.com/kylecook80/mac-can-sys"
repository = "https://github.com/kylecook80/mac-can-sys"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.0"

[build-dependencies]
bindgen = "0.66.1"
